core/colorspace: fix the max luminance of linear

It's supposed to match the reference luminance; this is just a remnant of KWin using a
different variant of linear internally

BUG: 494930
(cherry picked from commit 3a23b2974ae6388a58fd253ddd05062056347941)